Move classes out to individual managers and add camera class

--- a/Engine/Makefile
+++ b/Engine/Makefile
@@ -1,20 +1,24 @@
 CC = gcc
 CXX = g++
-CXXFLAGS = -g -O0 -std=c++11
-LDFLAGS = -I/usr/local/Cellar/sdl2/2.0.2/include -I/usr/local/Cellar/glew/1.10.0/include -L/usr/local/Cellar/sdl2/2.0.2/lib -L/usr/local/Cellar/glew/1.10.0/lib
+CXXFLAGS = -g -O0 -std=c++11 -Wall
+LDFLAGS = -I/usr/local/Cellar/glm/0.9.5.2/include -I/usr/local/Cellar/sdl2/2.0.2/include -I/usr/local/Cellar/glew/1.10.0/include -L/usr/local/Cellar/sdl2/2.0.2/lib -L/usr/local/Cellar/glew/1.10.0/lib
 LDLIBS = -framework OpenGL -lSDL2 -lGLEW
 
-OBJS = GameManager.o Shader.o main.o
-SRCS = GameManager.cpp Shader.cpp main.cpp
+OBJS = Camera.o GLManager.o GLEWManager.o SDLManager.o GameManager.o Shader.o main.o
+SRCS = Camera.cpp GLManager.cpp GLEWManager.cpp SDLManager.cpp GameManager.cpp Shader.cpp main.cpp
 
 all: engine
 
 engine: $(OBJS)
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o engine $(OBJS) $(LDLIBS)
 
-GameManager.o: GameManager.h
-Shader.o: Shader.h
-main.o: GameManager.h
+depend: .depend
+
+.depend: $(SRCS)
+	rm -f ./.depend
+	$(CXX) $(CXXFLAGS) -MM $^ -MF  ./.depend;
+
+include .depend
 
 tags: $(SRCS)
 	ctags --extra=+f $(SRCS)
