Separate GLES2 and emscripten #defines

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -44,6 +44,8 @@ set(engine_header_files
 find_package(GLM REQUIRED)
 
 IF (EMSCRIPTEN)
+  add_definitions( -DGLES2=1 )
+
   SET(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -g -Wall --preload-file ../assets/ -s ASSERTIONS=2")
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall --preload-file ../assets/ -s ASSERTIONS=2")
 
