Update cmake to work in more cases

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -70,6 +70,8 @@ IF (EMSCRIPTEN)
   add_executable (game.html main.cpp)
   target_link_libraries (game.html engine)
 ELSE ()
+  SET(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -g -Wall")
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++11 -stdlib=libc++")
   find_package(OpenGL REQUIRED)
   find_package(SDL2 REQUIRED)
   find_package(ASSIMP REQUIRED)
