make ffmpeg work in emscripten

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,28 +29,36 @@ set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY NEVER)
 set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE NEVER)
 find_package(GLM REQUIRED)
 find_package(ASSIMP REQUIRED)
+find_package(FFMPEG REQUIRED)
 set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
 set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
 
 IF (EMSCRIPTEN)
   add_definitions( -DGLES2=1 )
 
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall --preload-file ../assets/ -s TOTAL_MEMORY=280000000 -s USE_SDL=2")
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall --preload-file ../assets/ -s TOTAL_MEMORY=380000000 -s USE_SDL=2")
 
   set(ENGINE_INCLUDES
     ${GLM_INCLUDE_DIRS}
     ${ASSIMP_INCLUDE_DIR}
+    ${LIBAVCODEC_INCLUDE_DIRS}
+    ${LIBAVFORMAT_INCLUDE_DIRS}
+    ${LIBAVUTIL_INCLUDE_DIRS}
+    ${LIBSWSCALE_INCLUDE_DIRS}
   )
 
   set(ENGINE_LIBS
     ${ASSIMP_LIBRARY}
+    ${LIBAVFORMAT_LIBRARIES}
+    ${LIBAVCODEC_LIBRARIES}
+    ${LIBAVUTIL_LIBRARIES}
+    ${LIBSWSCALE_LIBRARIES}
   )
 ELSE ()
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++11 -stdlib=libc++")
   find_package(OpenGL REQUIRED)
   find_package(SDL2 REQUIRED)
   find_package(GLEW REQUIRED)
-  find_package(FFMPEG REQUIRED)
 
   find_library(corefoundation_lib CoreFoundation)
 
