Use vendored deps for sdl, and assimp, start on glm but had issues

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "dependencies/assimp"]
 	path = dependencies/assimp
 	url = git://github.com/assimp/assimp.git
+[submodule "dependencies/SDL"]
+	path = dependencies/SDL
+	url = https://github.com/spurious/SDL-mirror.git
+[submodule "dependencies/glm"]
+	path = dependencies/glm
+	url = git@github.com:g-truc/glm.git
+[submodule "dependencies/glew"]
+	path = dependencies/glew
+	url = git@github.com:Perlmint/glew-cmake.git
