--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -7,8 +7,8 @@ add_subdirectory( SDL )
 
 add_subdirectory( glew )
 
-set( ASSIMP_BUILD_ASSIMP_TOOLS OFF )
-set( ASSIMP_BUILD_SAMPLES      OFF )
-set( ASSIMP_BUILD_TESTS        OFF )
+set( ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "Build assimp tools" )
+set( ASSIMP_BUILD_TESTS OFF CACHE BOOL "Build assimp tests" )
+set( ASSIMP_BUILD_SAMPLES OFF CACHE BOOL "Build assimp samples" )
 
 add_subdirectory( assimp )
