Get some parts compiling in windows

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -2,6 +2,9 @@
 #  Author: Shervin Aflatooni
 #
 
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
+set(BUILD_SHARED_LIBS TRUE)
+
 file(GLOB TARGET_INC ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
 file(GLOB TARGET_INC_COMPONENTS ${CMAKE_CURRENT_SOURCE_DIR}/components/*.h)
 
